feat: persistence layer
