# src/main/resources/openapi.yml
@@ -24,7 +24,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Furniture'
+              $ref: '#/components/schemas/FurnitureDto'
         required: true
       responses:
         '201':
@@ -49,7 +49,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Furniture'
+                  $ref: '#/components/schemas/FurnitureDto'
         '401':
           $ref: '#/components/responses/UnauthorizedError'
         '404':
@@ -78,7 +78,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Furniture'
+                  $ref: '#/components/schemas/FurnitureDto'
         '401':
           $ref: '#/components/responses/UnauthorizedError'
         '404':
@@ -129,7 +129,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Furniture'
+                  $ref: '#/components/schemas/FurnitureDto'
         '401':
           $ref: '#/components/responses/UnauthorizedError'
         '404':
@@ -158,7 +158,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Furniture'
+                  $ref: '#/components/schemas/FurnitureDto'
         '401':
           $ref: '#/components/responses/UnauthorizedError'
         '404':
@@ -268,9 +268,13 @@ components:
 
   schemas:
 
-    Furniture:
+    FurnitureDto:
       type: object
       properties:
+        id:
+          type: integer
+          description:
+            Уникальный идентификатор товара в БД
         article:
           type: string
           description:
@@ -327,7 +331,7 @@ components:
             name: furnitures
             wrapped: true
           items:
-            $ref: '#/components/schemas/Furniture'
+            $ref: '#/components/schemas/FurnitureDto'
       example:
         {
           "nameClient": "Максим",
